WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
245014
REGRESSION (
252580@main
): [ macOS wk1 ] imported/w3c/web-platform-tests/cookies/value/value-ctl.html is a flaky failure
https://bugs.webkit.org/show_bug.cgi?id=245014
Summary
REGRESSION (252580@main): [ macOS wk1 ] imported/w3c/web-platform-tests/cooki...
Karl Rackler
Reported
2022-09-09 17:22:25 PDT
Description: imported/w3c/web-platform-tests/cookies/value/value-ctl.html The test was consistently passing until
252580@main
, where it began to flaky fail after a resync web-platform-tests/cookies from upstream 3afcc8cbd5512970bbd079. Reproduction steps: I can reproduce this on
254273@main
ToT. Command: run-webkit-tests -1 --exit-after-n-failures 1 --exit-after-n-crashes-or-timeouts 1 --iterations 50 -f --no-retry imported/w3c/web-platform-tests/cookies/value/value-ctl.html Result: Unexpected flakiness: text-only failures (1) imported/w3c/web-platform-tests/cookies/value/value-ctl.html [ Failure Pass ] History:
https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fcookies%2Fvalue%2Fvalue-ctl.html&platform=mac&flavor=wk1
Diff: --- /Volumes/Data/worker/Apple-Monterey-Release-WK1-Tests/build/layout-test-results/imported/w3c/web-platform-tests/cookies/value/value-ctl-expected.txt +++ /Volumes/Data/worker/Apple-Monterey-Release-WK1-Tests/build/layout-test-results/imported/w3c/web-platform-tests/cookies/value/value-ctl-actual.txt @@ -17,7 +17,7 @@ FAIL Cookie with %xf in value is rejected. assert_equals: The cookie was rejected. expected "" but got "test=15" FAIL Cookie with %x10 in value is rejected. assert_equals: The cookie was rejected. expected "" but got "test=16" FAIL Cookie with %x11 in value is rejected. assert_equals: The cookie was rejected. expected "" but got "test=17" -FAIL Cookie with %x12 in value is rejected. assert_equals: The cookie was rejected. expected "" but got "test=18" +PASS Cookie with %x12 in value is rejected. FAIL Cookie with %x13 in value is rejected. assert_equals: The cookie was rejected. expected "" but got "test=19" FAIL Cookie with %x14 in value is rejected. assert_equals: The cookie was rejected. expected "" but got "test=20" FAIL Cookie with %x15 in value is rejected. assert_equals: The cookie was rejected. expected "" but got "test=21"
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-09-09 17:22:45 PDT
<
rdar://problem/99766248
>
Karl Rackler
Comment 2
2022-09-09 17:27:07 PDT
I have marked this test as a flaky failure while this issue is investigated.
EWS
Comment 3
2022-09-09 17:32:29 PDT
Test gardening commit
254343@main
(edcb9afe58c9): <
https://commits.webkit.org/254343@main
> Reviewed commits have been landed. Closing PR #4207 and removing active labels.
Chris Dumez
Comment 4
2022-11-17 15:39:56 PST
Pull request:
https://github.com/WebKit/WebKit/pull/6608
EWS
Comment 5
2022-11-18 18:01:25 PST
Committed
256865@main
(6af2fb740dc2): <
https://commits.webkit.org/256865@main
> Reviewed commits have been landed. Closing PR #6608 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug