REGRESSION (252580@main): [ macOS wk1 ] imported/w3c/web-platform-tests/cookies/value/value-ctl.html is a flaky failure https://bugs.webkit.org/show_bug.cgi?id=245014 rdar://99766248

Reviewed by Darin Adler.

Fix testRunner.removeAllCookies() so that:
1. It takes a completion handler which only gets called after the cookies have been removed,
   which usually happens asynchronously.
2. It also clear the cookie cache in the WebProcess

This addresses the flakiness and makes the test pass consistently on Cocoa ports.

* LayoutTests/imported/w3c/web-platform-tests/cookies/value/value-ctl-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/resources/testdriver-vendor.js:
(window.test_driver_internal.delete_all_cookies):
* LayoutTests/platform/ios-15/imported/w3c/web-platform-tests/cookies/value/value-ctl-expected.txt: Removed.
* LayoutTests/platform/ios-wk2/TestExpectations:
* LayoutTests/platform/ios/imported/w3c/web-platform-tests/cookies/value/value-ctl-expected.txt: Removed.
* LayoutTests/platform/mac-bigsur/imported/w3c/web-platform-tests/cookies/value/value-ctl-expected.txt: Removed.
* LayoutTests/platform/mac-monterey/imported/w3c/web-platform-tests/cookies/value/value-ctl-expected.txt: Removed.
* LayoutTests/platform/mac-wk1/TestExpectations:
* LayoutTests/platform/mac-wk1/imported/w3c/web-platform-tests/cookies/value/value-ctl-expected.txt: Removed.
* LayoutTests/platform/mac/imported/w3c/web-platform-tests/cookies/value/value-ctl-expected.txt: Removed.
* Source/WebKit/UIProcess/API/APIHTTPCookieStore.cpp:
(API::HTTPCookieStore::deleteAllCookies):
* Source/WebKit/UIProcess/WebProcessPool.cpp:
(WebKit::WebProcessPool::forEachProcessForSession):
* Source/WebKit/UIProcess/WebProcessPool.h:
(WebKit::WebProcessPool::sendToAllProcessesForSession):
* Source/WebKit/UIProcess/WebsiteData/WebsiteDataStore.h:
* Source/WebKit/WebProcess/WebPage/WebCookieJar.h:
* Source/WebKit/WebProcess/WebProcess.cpp:
(WebKit::WebProcess::deleteAllCookies):
* Source/WebKit/WebProcess/WebProcess.h:
* Source/WebKit/WebProcess/WebProcess.messages.in:
* Source/WebKitLegacy/mac/WebView/WebPreferences.mm:
(+[WebPreferences _clearNetworkLoaderSession:]):
(+[WebPreferences _clearNetworkLoaderSession]): Deleted.
* Source/WebKitLegacy/mac/WebView/WebPreferencesPrivate.h:
* Tools/DumpRenderTree/TestRunner.cpp:
(removeAllCookiesCallback):
* Tools/DumpRenderTree/TestRunner.h:
* Tools/DumpRenderTree/mac/DumpRenderTree.mm:
(setWebPreferencesForTestOptions):
* Tools/DumpRenderTree/mac/TestRunnerMac.mm:
(TestRunner::removeAllCookies):
* Tools/DumpRenderTree/win/TestRunnerWin.cpp:
(TestRunner::removeAllCookies):
* Tools/WebKitTestRunner/InjectedBundle/Bindings/TestRunner.idl:
* Tools/WebKitTestRunner/InjectedBundle/InjectedBundle.cpp:
(WTR::InjectedBundle::didReceiveMessageToPage):
* Tools/WebKitTestRunner/InjectedBundle/TestRunner.cpp:
(WTR::TestRunner::removeAllCookies):
(WTR::TestRunner::callRemoveAllCookiesCallback):
* Tools/WebKitTestRunner/InjectedBundle/TestRunner.h:
* Tools/WebKitTestRunner/TestController.cpp:
(WTR::TestController::didReceiveSynchronousMessageFromInjectedBundle):
(WTR::TestController::removeAllCookies):
* Tools/WebKitTestRunner/TestInvocation.cpp:
(WTR::TestInvocation::didReceiveMessageFromInjectedBundle):
(WTR::TestInvocation::didRemoveAllCookies):
* Tools/WebKitTestRunner/TestInvocation.h:

Canonical link: https://commits.webkit.org/256865@main